--- a/src/main/webapp/app/home/home.component.html
+++ b/src/main/webapp/app/home/home.component.html
@@ -3,8 +3,11 @@
         <span class="hipster img-fluid img-rounded"></span>
     </div>
     <div class="col-md-9">
-        <h1 class="display-4">Welcome, Java Hipster!</h1>
-        <p class="lead">This is your homepage</p>
+        <h1 class="display-4">Qual Opt</h1>
+        <p class="lead">
+            QualOpt problem statement
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu libero commodo, tristique sapien quis, luctus est.
+        </p>
 
         <div [ngSwitch]="isAuthenticated()">
             <div class="alert alert-success" *ngSwitchCase="true">
@@ -24,19 +27,21 @@
         </div>
 
         <p>
-            If you have any question on JHipster:
+            How QualOpt effectively solves this/benefits:
         </p>
 
         <ul>
-            <li><a href="http://jhipster.github.io/" target="_blank">JHipster homepage</a></li>
-            <li><a href="http://stackoverflow.com/tags/jhipster/info" target="_blank">JHipster on Stack Overflow</a></li>
-            <li><a href="https://github.com/jhipster/generator-jhipster/issues?state=open" target="_blank">JHipster bug tracker</a></li>
-            <li><a href="https://gitter.im/jhipster/generator-jhipster" target="_blank">JHipster public chat room</a></li>
-            <li><a href="https://twitter.com/java_hipster" target="_blank" >follow @java_hipster on Twitter</a></li>
+            <li>Support Researchers</li>
+            <li>Supports GitHub users</li>
+            <li>Security</li>
+            <li>etc.</li>
         </ul>
 
         <p>
-            <span>If you like JHipster, don't forget to give us a star on</span> <a href="https://github.com/jhipster/generator-jhipster" target="_blank">Github</a>!
+            More about GitHub and problem:
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse eu libero commodo, tristique sapien quis, luctus est.
         </p>
+
+        <a href="https://github.com/">Link to GitHub for visitors</a>
     </div>
 </div>
