--- a/src/main/webapp/app/entities/study/study-dialog.component.html
+++ b/src/main/webapp/app/entities/study/study-dialog.component.html
@@ -22,21 +22,23 @@
         </div>
         <div class="form-group">
             <label class="form-control-label" for="field_description">Description</label>
-            <input type="text" class="form-control" name="description" id="field_description"
-                [(ngModel)]="study.description"
-             />
+            <textarea class="form-control" name="description" id="field_description" rows="4"
+                [(ngModel)]="study.description">
+            </textarea>
         </div>
         <div class="form-group">
             <label class="form-control-label" for="field_incentive">Incentive</label>
-            <input type="text" class="form-control" name="incentive" id="field_incentive"
-                [(ngModel)]="study.incentive"
-             />
+            <textarea class="form-control" name="incentive" id="field_incentive" rows="4"
+                [(ngModel)]="study.incentive">
+            </textarea>
         </div>
-        <div class="form-group">
-            <label class="form-control-label" for="field_hasPay">Has Pay</label>
-            <input type="checkbox" class="form-control" name="hasPay" id="field_hasPay"
-                [(ngModel)]="study.hasPay"
-             />
+        <div class="form-check">
+            <label class="form-check-label" for="field_hasPay">
+                <input type="checkbox" class="form-check-input" name="hasPay" id="field_hasPay"
+                       [(ngModel)]="study.hasPay"
+                />
+                Monetary
+            </label>
         </div>
 
         <div class="form-group">
