Updated list of studies and study details
Updated the study and study detail components to be consistent with what was described in the 'main menu' and 'study summary' mockups respectively

--- a/src/main/webapp/app/entities/study/study.component.html
+++ b/src/main/webapp/app/entities/study/study.component.html
@@ -16,19 +16,17 @@
         <table class="table table-striped">
             <thead>
             <tr>
-            <th><span>ID</span></th>
             <th><span>Name</span></th>
             <th><span>Description</span></th>
             <th><span>Incentive</span></th>
             <th><span>Has Pay</span></th>
             <th><span>Researcher</span></th>
-            <th></th>
+            <th *jhiHasAnyAuthority="'ROLE_ADMIN'"></th>
             </tr>
             </thead>
             <tbody>
             <tr *ngFor="let study of studies ;trackBy: trackId">
-                <td><a [routerLink]="['../study', study.id ]">{{study.id}}</a></td>
-                <td>{{study.name}}</td>
+                <th scope="row"><a [routerLink]="['../study', study.id ]">{{study.name}}</a></th>
                 <td>{{study.description}}</td>
                 <td>{{study.incentive}}</td>
                 <td>{{study.hasPay}}</td>
@@ -37,7 +35,7 @@
                         <a [routerLink]="['../researcher', study.researcher?.id ]" >{{study.researcher?.email}}</a>
                     </div>
                 </td>
-                <td class="text-right">
+                <td *jhiHasAnyAuthority="'ROLE_ADMIN'" class="text-right">
                     <div class="btn-group flex-btn-group-container">
                         <button type="submit"
                                 [routerLink]="['../study', study.id ]"
