--- a/src/main/webapp/app/entities/study/study-detail.component.html
+++ b/src/main/webapp/app/entities/study/study-detail.component.html
@@ -16,6 +16,10 @@
         <dd>
             <span>{{study.incentive}}</span>
         </dd>
+        <dt><span>Has Pay</span></dt>
+        <dd>
+            <span>{{study.hasPay}}</span>
+        </dd>
         <dt><span>Participant</span></dt>
         <dd>
             <span *ngFor="let participant of study.participants; let last = last">
