--- a/src/main/webapp/app/entities/study/study-dialog.component.html
+++ b/src/main/webapp/app/entities/study/study-dialog.component.html
@@ -27,6 +27,11 @@
             <input type="text" class="form-control" name="incentive" id="field_incentive"
                 [(ngModel)]="study.incentive"  />
         </div>
+        <div class="form-group">
+            <label class="form-control-label" for="field_hasPay">Has Pay</label>
+            <input type="checkbox" class="form-control" name="hasPay" id="field_hasPay"
+                [(ngModel)]="study.hasPay"  />
+        </div>
 
         <div class="form-group">
             <label for="field_participant">Participant</label>
