--- a/src/main/webapp/app/entities/study/study.component.html
+++ b/src/main/webapp/app/entities/study/study.component.html
@@ -20,6 +20,7 @@
             <th><span>Name</span></th>
             <th><span>Description</span></th>
             <th><span>Incentive</span></th>
+            <th><span>Has Pay</span></th>
             <th><span>Participant</span></th>
             <th></th>
             </tr>
@@ -30,6 +31,7 @@
                 <td>{{study.name}}</td>
                 <td>{{study.description}}</td>
                 <td>{{study.incentive}}</td>
+                <td>{{study.hasPay}}</td>
                 <td>
                     <span *ngFor="let participant of study.participants; let last = last">
                             <a class="form-control-static" [routerLink]="['../participant', participant?.id ]">{{participant.email}}</a>{{last ? '' : ', '}}
