Updated Study components with new changes

--- a/src/main/webapp/app/entities/study/study.component.html
+++ b/src/main/webapp/app/entities/study/study.component.html
@@ -19,8 +19,8 @@
             <th><span>Name</span></th>
             <th><span>Description</span></th>
             <th><span>Incentive</span></th>
-            <th><span>Has Pay</span></th>
-            <th><span>Participant</span></th>
+            <th><span>Paid</span></th>
+            <th><span>Participants</span></th>
             <th *jhiHasAnyAuthority="'ROLE_ADMIN'"></th>
             </tr>
             </thead>
