--- a/src/main/webapp/app/entities/study/study-dialog.component.html
+++ b/src/main/webapp/app/entities/study/study-dialog.component.html
@@ -29,17 +29,12 @@
                 [(ngModel)]="study.incentive">
             </textarea>
         </div>
-        <div class="form-group">
-            <label class="form-control-label" for="field_hasPay">Has Pay</label>
-            <input type="checkbox" class="form-control" name="hasPay" id="field_hasPay"
-                [(ngModel)]="study.hasPay"  />
-        </div>
-
-        <div class="form-group">
-            <label for="field_participant">Participant</label>
-            <select class="form-control" id="field_participant" multiple name="participant" [(ngModel)]="study.participants">
-                <option [ngValue]="getSelected(study.participants, participantOption)" *ngFor="let participantOption of participants; trackBy: trackParticipantById">{{participantOption.email}}</option>
-            </select>
+        <div class="form-check">
+            <label class="form-control-label" for="field_hasPay">
+                <input type="checkbox" class="form-control" name="hasPay" id="field_hasPay"
+                    [(ngModel)]="study.hasPay"  />
+                Paid
+            </label>
         </div>
     </div>
     <div class="modal-footer">
