--- a/src/main/webapp/app/entities/participant/participant-detail.component.html
+++ b/src/main/webapp/app/entities/participant/participant-detail.component.html
@@ -4,9 +4,9 @@
     <hr>
     <jhi-alert-error></jhi-alert-error>
     <dl class="row-md jh-entity-details">
-        <dt><span>Email</span></dt>
+        <dt><span>Email Address</span></dt>
         <dd>
-            <span>{{participant.email}}</span>
+            <span>{{participant.emailAddress}}</span>
         </dd>
         <dt><span>Occupation</span></dt>
         <dd>
