--- a/src/main/webapp/app/entities/email/email-dialog.component.html
+++ b/src/main/webapp/app/entities/email/email-dialog.component.html
@@ -1,26 +1,26 @@
 <form name="editForm" role="form" novalidate (ngSubmit)="save()" #editForm="ngForm">
 
     <div class="modal-header">
-        <h4 class="modal-title" id="myParticipantLabel">Create or edit a Participant</h4>
+        <h4 class="modal-title" id="myEmailLabel">Create or edit a Email</h4>
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"
                 (click)="clear()">&times;</button>
     </div>
     <div class="modal-body">
         <jhi-alert-error></jhi-alert-error>
-        <div class="form-group" [hidden]="!participant.id">
+        <div class="form-group" [hidden]="!email.id">
             <label for="id">ID</label>
             <input type="text" class="form-control" id="id" name="id"
-                   [(ngModel)]="participant.id" readonly />
+                   [(ngModel)]="email.id" readonly />
         </div>
         <div class="form-group">
-            <label class="form-control-label" for="field_emailAddress">Email Address</label>
-            <input type="text" class="form-control" name="emailAddress" id="field_emailAddress"
-                [(ngModel)]="participant.emailAddress"  />
+            <label class="form-control-label" for="field_subject">Subject</label>
+            <input type="text" class="form-control" name="subject" id="field_subject"
+                [(ngModel)]="email.subject"  />
         </div>
         <div class="form-group">
-            <label class="form-control-label" for="field_occupation">Occupation</label>
-            <input type="text" class="form-control" name="occupation" id="field_occupation"
-                [(ngModel)]="participant.occupation"  />
+            <label class="form-control-label" for="field_body">Body</label>
+            <input type="text" class="form-control" name="body" id="field_body"
+                [(ngModel)]="email.body"  />
         </div>
 
     </div>
