--- a/src/main/webapp/app/entities/researcher/researcher-dialog.component.html
+++ b/src/main/webapp/app/entities/researcher/researcher-dialog.component.html
@@ -13,9 +13,9 @@
                    [(ngModel)]="researcher.id" readonly />
         </div>
         <div class="form-group">
-            <label class="form-control-label" for="field_email">Email</label>
-            <input type="text" class="form-control" name="email" id="field_email"
-                [(ngModel)]="researcher.email"  />
+            <label class="form-control-label" for="field_emailAddress">Email Address</label>
+            <input type="text" class="form-control" name="emailAddress" id="field_emailAddress"
+                [(ngModel)]="researcher.emailAddress"  />
         </div>
         <div class="form-group">
             <label class="form-control-label" for="field_occupation">Occupation</label>
@@ -28,13 +28,6 @@
                 [(ngModel)]="researcher.institute"  />
         </div>
 
-        <div class="form-group">
-            <label for="field_study">Study</label>
-            <select class="form-control" id="field_study" name="study" [(ngModel)]="researcher.study" >
-                <option [ngValue]="null"></option>
-                <option [ngValue]="studyOption.id === researcher.study?.id ? researcher.study : studyOption" *ngFor="let studyOption of studies; trackBy: trackStudyById">{{studyOption.id}}</option>
-            </select>
-        </div>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" (click)="clear()">
