--- a/src/main/webapp/app/entities/email/email-dialog.component.html
+++ b/src/main/webapp/app/entities/email/email-dialog.component.html
@@ -19,8 +19,9 @@
         </div>
         <div class="form-group">
             <label class="form-control-label" for="field_body">Body</label>
-            <input type="text" class="form-control" name="body" id="field_body"
-                [(ngModel)]="email.body"  />
+            <textarea type="text" class="form-control" name="body" id="field_body" rows="5"
+                [(ngModel)]="email.body">
+            </textarea>
         </div>
 
     </div>
