Improved Email workflow
Changes how emails are represented in the application, along with the creating and editing workflows and adding an email to a study

--- a/src/main/webapp/app/entities/email/email-detail.component.html
+++ b/src/main/webapp/app/entities/email/email-detail.component.html
@@ -1,14 +1,9 @@
 
 <div *ngIf="email">
-    <h2><span>Email</span> {{email.id}}</h2>
+    <h2>{{email.subject}}</h2>
     <hr>
     <jhi-alert-error></jhi-alert-error>
     <dl class="row-md jh-entity-details">
-        <dt><span>Subject</span></dt>
-        <dd>
-            <span>{{email.subject}}</span>
-        </dd>
-        <dt><span>Body</span></dt>
         <dd>
             <span>{{email.body}}</span>
         </dd>
