--- a/src/main/webapp/app/entities/study/study-dialog.component.html
+++ b/src/main/webapp/app/entities/study/study-dialog.component.html
@@ -7,35 +7,43 @@
     </div>
     <div class="modal-body">
         <jhi-alert-error></jhi-alert-error>
+        <div class="form-group" [hidden]="!study.id">
+            <label for="id">ID</label>
+            <input type="text" class="form-control" id="id" name="id"
+                   [(ngModel)]="study.id" readonly />
+        </div>
         <div class="form-group">
             <label class="form-control-label" for="field_name">Name</label>
             <input type="text" class="form-control" name="name" id="field_name"
-                [(ngModel)]="study.name"  />
+                [(ngModel)]="study.name" required />
+            <div [hidden]="!(editForm.controls.name?.dirty && editForm.controls.name?.invalid)">
+                <small class="form-text text-danger"
+                   [hidden]="!editForm.controls.name?.errors?.required">
+                   This field is required.
+                </small>
+            </div>
         </div>
         <div class="form-group">
             <label class="form-control-label" for="field_description">Description</label>
-            <textarea class="form-control" name="description" id="field_description" rows="4"
-                [(ngModel)]="study.description">
-            </textarea>
+            <textarea class="form-control" name="description" id="field_description"
+                [(ngModel)]="study.description"  ></textarea>
         </div>
         <div class="form-group">
             <label class="form-control-label" for="field_incentive">Incentive</label>
-            <textarea class="form-control" name="incentive" id="field_incentive" rows="4"
-                [(ngModel)]="study.incentive">
-            </textarea>
-        </div>
-        <div class="form-check">
-            <label class="form-check-label" for="field_hasPay">
-                <input type="checkbox" class="form-check-input" name="hasPay" id="field_hasPay"
-                   [(ngModel)]="study.hasPay" />
-                Paid
-            </label>
+            <textarea class="form-control" name="incentive" id="field_incentive"
+                [(ngModel)]="study.incentive"  ></textarea>
         </div>
         <div class="form-group">
-            <label for="field_email">Attach an email</label>
-            <select class="form-control" id="field_email" name="email" [(ngModel)]="study.email">
-                <option [ngValue]="null">New Email</option>
-                <option [ngValue]="emailOption.id === study.email?.id ? study.email : emailOption" *ngFor="let emailOption of emails; trackBy: trackEmailById">{{emailOption.subject}}</option>
+            <label class="form-control-label" for="field_hasPay">Has Pay</label>
+            <input type="checkbox" class="form-control" name="hasPay" id="field_hasPay"
+                [(ngModel)]="study.hasPay"  />
+        </div>
+
+        <div class="form-group">
+            <label for="field_user">User</label>
+            <select class="form-control" id="field_user" name="user" [(ngModel)]="study.user" >
+                <option [ngValue]="null"></option>
+                <option [ngValue]="userOption.id === study.user?.id ? study.user : userOption" *ngFor="let userOption of users; trackBy: trackUserById">{{userOption.login}}</option>
             </select>
         </div>
     </div>
