Updated Participant Entity
Now has fields to work with filters

--- a/src/main/webapp/app/entities/participant/participant-detail.component.html
+++ b/src/main/webapp/app/entities/participant/participant-detail.component.html
@@ -4,13 +4,29 @@
     <hr>
     <jhi-alert-error></jhi-alert-error>
     <dl class="row-md jh-entity-details">
-        <dt><span>Email Address</span></dt>
+        <dt><span>Email</span></dt>
         <dd>
-            <span>{{participant.emailAddress}}</span>
+            <span>{{participant.email}}</span>
         </dd>
         <dt><span>Occupation</span></dt>
         <dd>
             <span>{{participant.occupation}}</span>
+        </dd>
+        <dt><span>Location</span></dt>
+        <dd>
+            <span>{{participant.location}}</span>
+        </dd>
+        <dt><span>Programming Language</span></dt>
+        <dd>
+            <span>{{participant.programmingLanguage}}</span>
+        </dd>
+        <dt><span>Number Of Contributions</span></dt>
+        <dd>
+            <span>{{participant.numberOfContributions}}</span>
+        </dd>
+        <dt><span>Number Of Repositories</span></dt>
+        <dd>
+            <span>{{participant.numberOfRepositories}}</span>
         </dd>
     </dl>
 
