--- a/src/main/webapp/app/entities/study/study-dialog.component.html
+++ b/src/main/webapp/app/entities/study/study-dialog.component.html
@@ -46,6 +46,12 @@
                 <option [ngValue]="userOption.id === study.user?.id ? study.user : userOption" *ngFor="let userOption of users; trackBy: trackUserById">{{userOption.login}}</option>
             </select>
         </div>
+        <div class="form-group">
+            <label for="field_participant">Participant</label>
+            <select class="form-control" id="field_participant" multiple name="participant" [(ngModel)]="study.participants">
+                <option [ngValue]="getSelected(study.participants, participantOption)" *ngFor="let participantOption of participants; trackBy: trackParticipantById">{{participantOption.email}}</option>
+            </select>
+        </div>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" (click)="clear()">
