--- a/src/main/webapp/app/entities/participant/participant.component.html
+++ b/src/main/webapp/app/entities/participant/participant.component.html
@@ -12,55 +12,103 @@
     <div class="row">
     </div>
     <br/>
-    <div class="table-responsive" *ngIf="participants">
-        <table class="table table-striped">
-            <thead>
-            <tr>
-            <th><span>ID</span></th>
-            <th><span>Email</span></th>
-            <th><span>Occupation</span></th>
-            <th><span>Location</span></th>
-            <th><span>Programming Language</span></th>
-            <th><span>Number Of Contributions</span></th>
-            <th><span>Number Of Repositories</span></th>
-            <th></th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr *ngFor="let participant of participants ;trackBy: trackId">
-                <td><a [routerLink]="['../participant', participant.id ]">{{participant.id}}</a></td>
-                <td>{{participant.email}}</td>
-                <td>{{participant.occupation}}</td>
-                <td>{{participant.location}}</td>
-                <td>{{participant.programmingLanguage}}</td>
-                <td>{{participant.numberOfContributions}}</td>
-                <td>{{participant.numberOfRepositories}}</td>
-                <td class="text-right">
-                    <div class="btn-group flex-btn-group-container">
-                        <button type="submit"
-                                [routerLink]="['../participant', participant.id ]"
-                                class="btn btn-info btn-sm">
-                            <span class="fa fa-eye"></span>
-                            <span class="hidden-md-down">View</span>
-                        </button>
-                        <button type="submit"
-                                [routerLink]="['/', { outlets: { popup: 'participant/'+ participant.id + '/edit'} }]"
-                                replaceUrl="true"
-                                class="btn btn-primary btn-sm">
-                            <span class="fa fa-pencil"></span>
-                            <span class="hidden-md-down">Edit</span>
-                        </button>
-                        <button type="submit"
-                                [routerLink]="['/', { outlets: { popup: 'participant/'+ participant.id + '/delete'} }]"
-                                replaceUrl="true"
-                                class="btn btn-danger btn-sm">
-                            <span class="fa fa-remove"></span>
-                            <span class="hidden-md-down">Delete</span>
-                        </button>
-                    </div>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+    <div class="row">
+        <div class="col-3">
+            <h4>Filter Participants</h4>
+            <form>
+                <div class="form-group">
+                    <label for="programmingLanguage">Programming Language</label>
+                    <select class="form-control" id="programmingLanguage">
+                        <option>Java</option>
+                        <option>JavaScript</option>
+                        <option>C</option>
+                        <option>Python</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="location">Location</label>
+                    <select class="form-control" id="location">
+                        <option>New Zealand</option>
+                        <option>Australia</option>
+                        <option>Singapore</option>
+                        <option>California</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="occupation">Occupation</label>
+                    <select class="form-control" id="occupation">
+                        <option>Software Engineer</option>
+                        <option>Student</option>
+                        <option>Designer</option>
+                        <option>Developer</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="contributions">Minimum number of contributions</label>
+                    <input class="form-control" type="number" value="0" id="contributions">
+                </div>
+                <div class="form-group">
+                    <label for="repositories">Minimum number of repositories</label>
+                    <input class="form-control" type="number" value="0" id="repositories">
+                </div>
+                <div class="form-group">
+                    <label for="participants">Limit number of participants</label>
+                    <input class="form-control" type="number" value="10" id="participants">
+                </div>
+            </form>
+        </div>
+        <div class="col-9">
+            <div class="table-responsive" *ngIf="participants">
+                <table class="table table-striped">
+                    <thead>
+                    <tr>
+                        <th><span>ID</span></th>
+                        <th><span>Email</span></th>
+                        <th><span>Occupation</span></th>
+                        <th><span>Location</span></th>
+                        <th><span>Programming Language</span></th>
+                        <th><span>Number Of Contributions</span></th>
+                        <th><span>Number Of Repositories</span></th>
+                        <th></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr *ngFor="let participant of participants ;trackBy: trackId">
+                        <td><a [routerLink]="['../participant', participant.id ]">{{participant.id}}</a></td>
+                        <td>{{participant.email}}</td>
+                        <td>{{participant.occupation}}</td>
+                        <td>{{participant.location}}</td>
+                        <td>{{participant.programmingLanguage}}</td>
+                        <td>{{participant.numberOfContributions}}</td>
+                        <td>{{participant.numberOfRepositories}}</td>
+                        <td class="text-right">
+                            <div class="btn-group flex-btn-group-container">
+                                <button type="submit"
+                                        [routerLink]="['../participant', participant.id ]"
+                                        class="btn btn-info btn-sm">
+                                    <span class="fa fa-eye"></span>
+                                    <span class="hidden-md-down">View</span>
+                                </button>
+                                <button type="submit"
+                                        [routerLink]="['/', { outlets: { popup: 'participant/'+ participant.id + '/edit'} }]"
+                                        replaceUrl="true"
+                                        class="btn btn-primary btn-sm">
+                                    <span class="fa fa-pencil"></span>
+                                    <span class="hidden-md-down">Edit</span>
+                                </button>
+                                <button type="submit"
+                                        [routerLink]="['/', { outlets: { popup: 'participant/'+ participant.id + '/delete'} }]"
+                                        replaceUrl="true"
+                                        class="btn btn-danger btn-sm">
+                                    <span class="fa fa-remove"></span>
+                                    <span class="hidden-md-down">Delete</span>
+                                </button>
+                            </div>
+                        </td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
     </div>
 </div>
