Regen app, removed researcher entity

--- a/src/main/webapp/app/entities/email/email-detail.component.html
+++ b/src/main/webapp/app/entities/email/email-detail.component.html
@@ -12,6 +12,12 @@
         <dd>
             <span>{{email.body}}</span>
         </dd>
+        <dt><span>Study</span></dt>
+        <dd>
+            <div *ngIf="email.study">
+                <a [routerLink]="['/study', email.study?.id]">{{email.study?.id}}</a>
+            </div>
+        </dd>
     </dl>
 
     <button type="submit"
