--- a/src/main/webapp/app/entities/email/email-dialog.component.html
+++ b/src/main/webapp/app/entities/email/email-dialog.component.html
@@ -15,14 +15,27 @@
         <div class="form-group">
             <label class="form-control-label" for="field_subject">Subject</label>
             <input type="text" class="form-control" name="subject" id="field_subject"
-                [(ngModel)]="email.subject"  />
+                [(ngModel)]="email.subject" required />
+            <div [hidden]="!(editForm.controls.subject?.dirty && editForm.controls.subject?.invalid)">
+                <small class="form-text text-danger"
+                   [hidden]="!editForm.controls.subject?.errors?.required">
+                   This field is required.
+                </small>
+            </div>
         </div>
         <div class="form-group">
             <label class="form-control-label" for="field_body">Body</label>
-            <input type="text" class="form-control" name="body" id="field_body"
-                [(ngModel)]="email.body"  />
+            <textarea class="form-control" name="body" id="field_body"
+                [(ngModel)]="email.body"  ></textarea>
         </div>
 
+        <div class="form-group">
+            <label for="field_study">Study</label>
+            <select class="form-control" id="field_study" name="study" [(ngModel)]="email.study">
+                <option [ngValue]="null"></option>
+                <option [ngValue]="studyOption.id === email.study?.id ? email.study : studyOption" *ngFor="let studyOption of studies; trackBy: trackStudyById">{{studyOption.id}}</option>
+            </select>
+        </div>
     </div>
     <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal" (click)="clear()">
