--- a/src/main/webapp/app/entities/email/email.component.html
+++ b/src/main/webapp/app/entities/email/email.component.html
@@ -19,6 +19,7 @@
             <th><span>ID</span></th>
             <th><span>Subject</span></th>
             <th><span>Body</span></th>
+            <th><span>Study</span></th>
             <th></th>
             </tr>
             </thead>
@@ -27,6 +28,11 @@
                 <td><a [routerLink]="['../email', email.id ]">{{email.id}}</a></td>
                 <td>{{email.subject}}</td>
                 <td>{{email.body}}</td>
+                <td>
+                    <div *ngIf="email.study">
+                        <a [routerLink]="['../study', email.study?.id ]" >{{email.study?.id}}</a>
+                    </div>
+                </td>
                 <td class="text-right">
                     <div class="btn-group flex-btn-group-container">
                         <button type="submit"
