--- a/src/main/webapp/app/entities/participant/participant.component.html
+++ b/src/main/webapp/app/entities/participant/participant.component.html
@@ -17,16 +17,24 @@
             <thead>
             <tr>
             <th><span>ID</span></th>
-            <th><span>Email Address</span></th>
+            <th><span>Email</span></th>
             <th><span>Occupation</span></th>
+            <th><span>Location</span></th>
+            <th><span>Programming Language</span></th>
+            <th><span>Number Of Contributions</span></th>
+            <th><span>Number Of Repositories</span></th>
             <th></th>
             </tr>
             </thead>
             <tbody>
             <tr *ngFor="let participant of participants ;trackBy: trackId">
                 <td><a [routerLink]="['../participant', participant.id ]">{{participant.id}}</a></td>
-                <td>{{participant.emailAddress}}</td>
+                <td>{{participant.email}}</td>
                 <td>{{participant.occupation}}</td>
+                <td>{{participant.location}}</td>
+                <td>{{participant.programmingLanguage}}</td>
+                <td>{{participant.numberOfContributions}}</td>
+                <td>{{participant.numberOfRepositories}}</td>
                 <td class="text-right">
                     <div class="btn-group flex-btn-group-container">
                         <button type="submit"
