--- a/src/main/webapp/app/entities/study/study-dialog.component.html
+++ b/src/main/webapp/app/entities/study/study-dialog.component.html
@@ -15,17 +15,23 @@
         <div class="form-group">
             <label class="form-control-label" for="field_name">Name</label>
             <input type="text" class="form-control" name="name" id="field_name"
-                [(ngModel)]="study.name"  />
+                [(ngModel)]="study.name" required />
+            <div [hidden]="!(editForm.controls.name?.dirty && editForm.controls.name?.invalid)">
+                <small class="form-text text-danger"
+                   [hidden]="!editForm.controls.name?.errors?.required">
+                   This field is required.
+                </small>
+            </div>
         </div>
         <div class="form-group">
             <label class="form-control-label" for="field_description">Description</label>
-            <input type="text" class="form-control" name="description" id="field_description"
-                [(ngModel)]="study.description"  />
+            <textarea class="form-control" name="description" id="field_description"
+                [(ngModel)]="study.description"  ></textarea>
         </div>
         <div class="form-group">
             <label class="form-control-label" for="field_incentive">Incentive</label>
-            <input type="text" class="form-control" name="incentive" id="field_incentive"
-                [(ngModel)]="study.incentive"  />
+            <textarea class="form-control" name="incentive" id="field_incentive"
+                [(ngModel)]="study.incentive"  ></textarea>
         </div>
         <div class="form-group">
             <label class="form-control-label" for="field_hasPay">Has Pay</label>
@@ -34,23 +40,16 @@
         </div>
 
         <div class="form-group">
-            <label for="field_email">Email</label>
-            <select class="form-control" id="field_email" name="email" [(ngModel)]="study.email">
+            <label for="field_user">User</label>
+            <select class="form-control" id="field_user" name="user" [(ngModel)]="study.user" >
                 <option [ngValue]="null"></option>
-                <option [ngValue]="emailOption.id === study.email?.id ? study.email : emailOption" *ngFor="let emailOption of emails; trackBy: trackEmailById">{{emailOption.id}}</option>
+                <option [ngValue]="userOption.id === study.user?.id ? study.user : userOption" *ngFor="let userOption of users; trackBy: trackUserById">{{userOption.login}}</option>
             </select>
         </div>
         <div class="form-group">
             <label for="field_participant">Participant</label>
             <select class="form-control" id="field_participant" multiple name="participant" [(ngModel)]="study.participants">
-                <option [ngValue]="getSelected(study.participants, participantOption)" *ngFor="let participantOption of participants; trackBy: trackParticipantById">{{participantOption.emailAddress}}</option>
-            </select>
-        </div>
-        <div class="form-group">
-            <label for="field_researcher">Researcher</label>
-            <select class="form-control" id="field_researcher" name="researcher" [(ngModel)]="study.researcher" >
-                <option [ngValue]="null"></option>
-                <option [ngValue]="researcherOption.id === study.researcher?.id ? study.researcher : researcherOption" *ngFor="let researcherOption of researchers; trackBy: trackResearcherById">{{researcherOption.id}}</option>
+                <option [ngValue]="getSelected(study.participants, participantOption)" *ngFor="let participantOption of participants; trackBy: trackParticipantById">{{participantOption.email}}</option>
             </select>
         </div>
     </div>
