Added Send Email button
On the study-detail-component, doesn't acutally send the email

--- a/src/main/webapp/app/entities/study/study-detail.component.html
+++ b/src/main/webapp/app/entities/study/study-detail.component.html
@@ -40,4 +40,11 @@
             class="btn btn-primary">
         <span class="fa fa-pencil"></span>&nbsp;<span> Edit</span>
     </button>
+
+    <button type="button"
+            [routerLink]="['#']"
+            replaceUrl="true"
+            class="btn btn-success">
+        <span class="fa fa-paper-plane"></span>&nbsp;<span> Send Invitation</span>
+    </button>
 </div>
