--- a/src/main/webapp/app/entities/participant/participant-detail.component.html
+++ b/src/main/webapp/app/entities/participant/participant-detail.component.html
@@ -36,7 +36,7 @@
         <span class="fa fa-arrow-left"></span>&nbsp;<span> Back</span>
     </button>
 
-    <button type="button"
+    <button *jhiHasAnyAuthority="'ROLE_ADMIN'" type="button"
             [routerLink]="['/', { outlets: { popup: 'participant/'+ participant.id + '/edit'} }]"
             replaceUrl="true"
             class="btn btn-primary">
